--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.4.0",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "twilio": "^3.45.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
